fp-macros/tests/ui/apply_invalid_output.stderr
error: expected identifier
 --> tests/ui/apply_invalid_output.rs:6:63
  |
6 |     type T = Apply!(brand: MyBrand, signature: (i32), output: "Invalid");
  |                                                               ^^^^^^^^^
